--- a/addproduct.html
+++ b/addproduct.html
@@ -9,27 +9,28 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
         rel="stylesheet" />
-   <link rel="stylesheet" href="style.css">
-<link rel="stylesheet" href="addproduct.css" />
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="addproduct.css" />
 
-    
+
 </head>
 
 <body>
 
     <div class="page-container">
         <aside class="sidebar">
-            <div class="logo">Fastkart.</div>
+            <div class="logo">SweetHeart</div>
             <ul class="menu">
                 <a href="./index.html">
                     <li>Dashboard</li>
                 </a>
 
                 <a href="./addproduct.html">
-                    <li class="active">Product</li>
+                    <li> Add New Product</li>
                 </a>
-
-                <li>Category</li>
+                <a href="./products.html">
+                    <li>Products</li>
+                </a>
                 <li>Attributes</li>
                 <li>Users</li>
                 <li>Roles</li>
@@ -63,7 +64,7 @@
 
                     <div class="form-row">
                         <label for="brand">Choose File</label>
-                       <input type="file" id="image" />
+                        <input type="file" id="image" />
 
                     </div>
 
