--- a/addproduct.html
+++ b/addproduct.html
@@ -32,7 +32,7 @@
                     <li>Products</li>
                 </a>
                 <li>Attributes</li>
-                <li>Users</li>
+                <a href="./users.html"><li>Users</li></a>
                 <li>Roles</li>
                 <li>Media</li>
                 <li>Orders</li>
